Get Date and Time

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>My first JavaScript</h2>
+    <button
+      type="button"
+      onclick="document.getElementById('demo').innerHTML=Date()"
+    >
+      click me to display Date and Time
+    </button>
+    <p id="demo"></p>
+
     <script src="./script.js"></script>
   </body>
 </html>
